--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-linking": "~8.0.11",
+    "expo-navigation-bar": "^5.0.10",
     "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
